Tue Apr  1 07:27:15 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_dump.c (rb_print_backtrace): current implementation
	  uses dladdr to get the path of objects.

Mon Mar 31 23:57:45 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/readline/extconf.rb: fix typo, `$defs` not `$DEFS`.
	  [ruby-core:61756] [Bug #9578]

Mon Mar 31 17:23:50 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/memory_status.rb: require envutil before accessing EnvUtil
	  module.  reported by ko1 via twitter.

Mon Mar 31 10:28:01 2014  Eric Wong  <e@80x24.org>

	* st.c (st_init_table_with_size): update comment
	  [Feature #9425]

Sun Mar 30 23:39:26 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_accept, open_ifs_socket, socketpair_internal):
	  reset inherit flag of socket to avoid unintentional inheritance of
	  socket.  note that the return value of SetHandleInformation() is not
	  verified intentionally because old Windows may return an error.
	  [Bug #9688] [ruby-core:61754]

Sat Mar 29 13:04:22 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_before_sweep): cap `malloc_limit' to
	  gc_params.malloc_limit_max.  It can grow and grow with such case:
	    `loop{"a" * (1024 ** 2)}'
	  [Bug #9687]

	  This issue is pointed by Tim Robertson.
	  http://www.omniref.com/blog/blog/2014/03/27/ruby-garbage-collection-still-not-ready-for-production/

Fri Mar 28 19:32:13 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* struct.c (not_a_member): extract name error and use same error
	  messages.  based on the patch by Marcus Stollsteimer <sto.mar AT
	  web.de> at [ruby-core:61721].  [Bug #9684]

Fri Mar 28 09:21:54 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/psych/psych.gemspec: update gemspec for psych-2.0.5

Fri Mar 28 09:11:06 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/psych/lib/psych.rb: Merge psych-2.0.5. bump version to
	  libyaml-0.1.6 for CVE-2014-2525.
	* ext/psych/yaml/config.h: ditto.
	* ext/psych/yaml/scanner.c: ditto.