@@ -1,3 +1,8 @@
+Tue Apr  1 07:37:00 2014  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* addr2line.c (fill_lines): use dynsym, which is used for dynamic
+	  linking and always exists, if there's no symtab.
+
 Tue Apr  1 07:27:15 2014  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* vm_dump.c (rb_print_backtrace): current implementation
